themes/a11y-base.css
/* common color definitions */

@define-color warning_color #faad3d;
@define-color warning_bg_color @warning_color;
@define-color warning_fg_color black;

@define-color question_color #8aadd4;
@define-color question_bg_color @question_color;
@define-color question_fg_color white;

@define-color error_color #ed3636;
@define-color error_bg_color @error_color;
@define-color error_fg_color white;

@define-color error_color #cc0000;
@define-color success_color #4e9a06;

* {
    -GtkRange-stepper-size: 2;
    -GtkScale-slider-length: 28;
    -GtkRange-slider-width: 28;

    -GtkTreeView-expander-size: 16;

    -GtkWidget-cursor-color: @theme_cursor_color;
    -GtkWidget-cursor-aspect-ratio: 0.08;

    -GtkWidget-focus-padding: 1;
    -GtkWidget-focus-line-width: 2;
    -GtkWidget-focus-line-pattern: "\002\002";

    -GtkMenu-horizontal-padding: 0;
    -GtkMenu-vertical-padding: 0;

    -GtkScrolledWindow-scrollbar-spacing: 0;
    -GtkScrolledWindow-scrollbars-within-bevel: 1;

    -GtkComboBox-arrow-scaling: 0.9;
    -GtkButton-default-border: 0;

    background-clip: padding-box;
}

GtkWindow {
    color: @theme_fg_color;
}

/* FIXME: this shouldn't be needed... */
* {
    background-color: @theme_base_color;
}

*:insensitive {
    background-color: @theme_button_insensitive_bg;
    border-color: @theme_button_insensitive_active_bg;
}

GtkCheckButton:selected,
GtkCheckButton:selected:focus {
    background-color: @theme_internal_bg;
    color: @theme_fg_color;
}

.image {
    color: @theme_active_color;
}

.image:hover {
    color: @theme_fg_color;
}

GtkImage,
GtkImage:insensitive {
    background-color: transparent;
}

.tooltip {
    background-color: @theme_fg_color;
    color: @theme_insensitive_bg;
}

.view.rubberband,
.rubberband {
    border-color: @theme_fg_color;
    border-style: solid;
    border-width: 1px;

    background-color: alpha(@theme_internal_bg, 0.35);
}

.grip {
    background-color: @theme_insensitive_color;
}

/***********
 * Buttons *
 ***********/
.button {
    border-width: 2px;
    border-style: solid;
    border-color: @theme_button_fg;

    border-radius: 3px;

    background-color: @theme_button_bg;
    padding: 1px 4px;
    color: @theme_button_fg;
}

.button:active {
    background-color: @theme_slider_bg;
    color: @theme_base_color;
    border-color: @theme_slider_bg;
}

.button:insensitive {
    background-color: @theme_button_insensitive_bg;
    color: @theme_button_insensitive_fg;
    border-color: @theme_insensitive_border;
}

GtkComboBox:insensitive {
    color: @theme_button_insensitive_fg
}

.button:insensitive:active {
    background-color: @theme_button_insensitive_active_bg;
    border-color: @theme_button_insensitive_active_bg;
    color: @theme_base_color;
}

.button:hover {
    background-color: @theme_fg_color;
    border-color: @theme_fg_color;
    color: @theme_base_color;
}

.button:hover:active {
    background-color: @theme_fg_color;
    border-color: @theme_fg_color;
}

/***********
 * Entries *
 ***********/
.entry {
    border-width: 1px;
    border-style: solid;
    border-color: @theme_fg_color;

    border-radius: 3px;

    background-color: @theme_base_color;
    padding: 4px;
}

.entry:selected {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.entry:focus {
    border-width: 2px;
    border-color: @theme_highlight_color;
}

.entry:insensitive {
    border-color: @theme_insensitive_border;
    background-color: @theme_insensitive_bg;
    color: @theme_insensitive_color;
}

GtkComboBox *:hover {
    color: @theme_insensitive_bg;
}

GtkComboBox .separator {
    color: transparent;
}

.trough {
    background-color: @theme_button_bg;
    color: @theme_active_color;

    border-width: 1px;
    border-style: solid;
    border-color: @theme_active_color;
    border-radius: 3px;
}

.trough:insensitive {
    border-color: @theme_insensitive_border;
    background-color: @theme_insensitive_bg;
    color: @theme_insensitive_color;
}

.trough:insensitive:active {
    background-color: @theme_insensitive_bg;
}

.progressbar {
    background-color: @theme_highlight_color;
    border-width: 1px;
    border-color: @theme_highlight_border;
    border-radius: 3px
}

GtkComboBox .button {
    padding: 0 4px;
}

.combobox-entry .button {
    background-color: @theme_base_color;
    color: @theme_fg_color;
    border-width: 1px;
    border-color: @theme_fg_color;
}

.combobox-entry .button:hover {
    background-color: @theme_fg_color;
}

.combobox-entry .button:active {
    background-color: @theme_active_color;
    color: @theme_base_color;
}

.combobox-entry .button:insensitive {
    background-color: @theme_insensitive_bg;
    color: @theme_internal_bg;
    border-color: @theme_insensitive_border;
}

.combobox-entry .entry:first-child {
    border-right-width: 0px;
    border-radius: 2px 0 0 2px;
}

.combobox-entry .entry:last-child {
    border-left-width: 0px;
    border-radius: 0 2px 2px 0;
}

.combobox-entry .button:first-child {
    border-radius: 2px 0 0 2px;
}

.combobox-entry .button:last-child {
    border-radius: 0 2px 2px 0;
}

.spinbutton .button {
    padding: 2px 6px;
    color: @theme_active_color;

    border-width: 1px;
    border-radius: 0;
    background-color: @theme_base_color;
    background-clip: border-box;

    border-color: transparent @theme_internal_border;
}

.spinbutton .button:hover {
    background-color: @theme_active_color;
    color: @theme_insensitive_bg;
    border-color: @theme_fg_color;
}

.spinbutton .button:insensitive {
    color: @theme_internal_bg;
    background-color: @theme_insensitive_bg;
}

.spinbutton .button:focus {
    border-top-color: @theme_highlight_color;
    border-bottom-color: @theme_highlight_color;
}

.spinbutton .button:first-child,
.spinbutton .button:last-child {
    border-color: transparent;
}

.spinbutton .button:first-child:focus {
    border-color: @theme_highlight_color;
    border-right-color: transparent;
}
/* ... */

